--- a/repo-login-switcher/pom.xml
+++ b/repo-login-switcher/pom.xml
@@ -1,118 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>share-login-switcher</artifactId>
-    <name>Share User Switcher</name>
+    <artifactId>repo-login-switcher</artifactId>
+    <name>Alfresco User Switcher</name>
     <packaging>amp</packaging>
-    <description>This is a sample Alfresco Share AMP project, depended upon by the share WAR module</description>
+    <description>This is a sample Alfresco repository AMP project, depended upon by the alfresco WAR aggregator</description>
 
     <parent>
         <groupId>com.switcher</groupId>
         <artifactId>login</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
-    <!-- 
-        SDK properties have sensible defaults in the SDK parent,
-        but you can override the properties below to use another version.
-        For more available properties see the alfresco-sdk-parent POM.
-       -->
+    
     <properties>
-        <!-- Defines the target WAR artifactId to run this amp, only used with the -Pamp-to-war switch
-             Allowed values: alfresco | share. In this case it's configured to use OOTB share -->
-        <app.amp.client.war.artifactId>share</app.amp.client.war.artifactId>
-
-        <!-- Defines the log level used in log4j.properties -->
-        <app.log.root.level>WARN</app.log.root.level>
-        <alfresco.version>5.0.d</alfresco.version>
+        <!-- Property overrides are mostly done in parent pom -->
     </properties>
 
-    <!-- Following dependencies are needed for compiling Java code in src/main/java; 
-         <scope>provided</scope> is inherited for each of the following; 
-         for more info, please refer to alfresco-platform-distribution POM -->
-
-
+    <!-- Following dependencies are needed for compiling Java code in src/main/java;
+          <scope>provided</scope> is inherited for each of the following;
+          for more info, please refer to alfresco-platform-distribution POM -->
     <dependencies>
         <dependency>
             <groupId>${alfresco.groupId}</groupId>
-            <artifactId>share</artifactId>
-            <version>${alfresco.version}</version>
-            <classifier>classes</classifier>
-            <scope>provided</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.alfresco</groupId>
-                    <artifactId>alfresco-web-framework-commons</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>javax.servlet</groupId>
-                    <artifactId>jsp-api</artifactId>
-                </exclusion>
-            </exclusions>
+            <artifactId>alfresco-repository</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${alfresco.groupId}</groupId>
+            <artifactId>alfresco-web-client</artifactId>
+            <version>4.2.f</version>
         </dependency>
 
-        <!--<dependency>-->
-        <!--<groupId>org.springframework.extensions.surf</groupId>-->
-        <!--<artifactId>spring-surf-api</artifactId>-->
-        <!--<scope>provided</scope>-->
-        <!--</dependency>-->
-
-        <!--===============================================================
-            The following dependencies are needed to be able to compile the
-            custom functional tests that are based on Page Objects (PO)
-            ===============================================================-->
-
-        <!-- Bring in the Share Page Objects (PO) used in our functional tests.
-             It contains page objects such as LoginPage -->
-        <!--<dependency>-->
-            <!--<groupId>${alfresco.groupId}</groupId>-->
-            <!--<artifactId>share-po</artifactId>-->
-            <!--<version>${alfresco.version}</version>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
-        <!--&lt;!&ndash; Bring in the Share Page Object (PO) Tests that comes with Alfresco. It has-->
-             <!--the org.alfresco.po.share.AbstractTest class that our custom tests extend. &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>${alfresco.groupId}</groupId>-->
-            <!--<artifactId>share-po</artifactId>-->
-            <!--<version>${alfresco.version}</version>-->
-            <!--<classifier>tests</classifier>-->
-            <!--<scope>test</scope>-->
-
-            <!--&lt;!&ndash; Exclude version 2.39.0 of selenium that does not work with latest FF browsers, we include-->
-               <!--version 2.45 later on here &ndash;&gt;-->
-            <!--<exclusions>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.seleniumhq.selenium</groupId>-->
-                    <!--<artifactId>selenium-java</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.seleniumhq.selenium</groupId>-->
-                    <!--<artifactId>selenium-server</artifactId>-->
-                <!--</exclusion>-->
-            <!--</exclusions>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>junit</groupId>-->
-            <!--<artifactId>junit</artifactId>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
+        <!-- Uncomment if you are using RM (Records Management) module, brings in RM related classes -->
+        <!--
+        <dependency>
+            <groupId>${alfresco.groupId}</groupId>
+            <artifactId>alfresco-rm</artifactId>
+            <version>${alfresco.rm.version}</version>
+            <classifier>classes</classifier>
+        </dependency>
+        -->
     </dependencies>
 
-    <repositories>
-        <repository>
-            <id>alfresco-public</id>
-            <url>https://artifacts.alfresco.com/nexus/content/groups/public</url>
-        </repository>
-        <repository>
-            <id>alfresco-public-snapshots</id>
-            <url>https://artifacts.alfresco.com/nexus/content/groups/public-snapshots</url>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>daily</updatePolicy>
-            </snapshots>
-        </repository>
-    </repositories>
+    <profiles>
 
+        <!--
+            Brings in the extra Enterprise specific repository classes,
+            if the 'enterprise' profile has been activated, needs to be activated manually. -->
+        <profile>
+            <id>enterprise</id>
+            <dependencies>
+                <dependency>
+                    <groupId>${alfresco.groupId}</groupId>
+                    <artifactId>alfresco-enterprise-repository</artifactId>
+                    <version>${alfresco.version}</version>
+                    <scope>provided</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+
+        <!-- If we are running in embedded Tomcat skip unit tests -->
+        <profile>
+            <id>run</id>
+            <properties>
+                <skipTests>true</skipTests>
+            </properties>
+        </profile>
+    </profiles>
 </project>
