--- a/share-login-switcher/pom.xml
+++ b/share-login-switcher/pom.xml
@@ -2,7 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <groupId>com.switcher</groupId>
     <artifactId>share-login-switcher</artifactId>
+    <version>1.2-SNAPSHOT</version>
     <name>Share User Switcher</name>
     <packaging>amp</packaging>
     <description>This is a sample Alfresco Share AMP project, depended upon by the share WAR module</description>
@@ -13,94 +15,16 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <!-- 
-        SDK properties have sensible defaults in the SDK parent,
-        but you can override the properties below to use another version.
-        For more available properties see the alfresco-sdk-parent POM.
-       -->
     <properties>
-        <!-- Defines the target WAR artifactId to run this amp, only used with the -Pamp-to-war switch
-             Allowed values: alfresco | share. In this case it's configured to use OOTB share -->
-        <app.amp.client.war.artifactId>share</app.amp.client.war.artifactId>
-
-        <!-- Defines the log level used in log4j.properties -->
-        <app.log.root.level>WARN</app.log.root.level>
-        <alfresco.version>5.0.d</alfresco.version>
+        <alfresco.version>4.2.f</alfresco.version>
+        <buildnumber>SNAPSHOT</buildnumber>
     </properties>
 
-    <!-- Following dependencies are needed for compiling Java code in src/main/java; 
-         <scope>provided</scope> is inherited for each of the following; 
-         for more info, please refer to alfresco-platform-distribution POM -->
-
-
-    <dependencies>
-        <dependency>
-            <groupId>${alfresco.groupId}</groupId>
-            <artifactId>share</artifactId>
-            <version>${alfresco.version}</version>
-            <classifier>classes</classifier>
-            <scope>provided</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.alfresco</groupId>
-                    <artifactId>alfresco-web-framework-commons</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>javax.servlet</groupId>
-                    <artifactId>jsp-api</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <!--<dependency>-->
-        <!--<groupId>org.springframework.extensions.surf</groupId>-->
-        <!--<artifactId>spring-surf-api</artifactId>-->
-        <!--<scope>provided</scope>-->
-        <!--</dependency>-->
-
-        <!--===============================================================
-            The following dependencies are needed to be able to compile the
-            custom functional tests that are based on Page Objects (PO)
-            ===============================================================-->
-
-        <!-- Bring in the Share Page Objects (PO) used in our functional tests.
-             It contains page objects such as LoginPage -->
-        <!--<dependency>-->
-            <!--<groupId>${alfresco.groupId}</groupId>-->
-            <!--<artifactId>share-po</artifactId>-->
-            <!--<version>${alfresco.version}</version>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
-        <!--&lt;!&ndash; Bring in the Share Page Object (PO) Tests that comes with Alfresco. It has-->
-             <!--the org.alfresco.po.share.AbstractTest class that our custom tests extend. &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>${alfresco.groupId}</groupId>-->
-            <!--<artifactId>share-po</artifactId>-->
-            <!--<version>${alfresco.version}</version>-->
-            <!--<classifier>tests</classifier>-->
-            <!--<scope>test</scope>-->
-
-            <!--&lt;!&ndash; Exclude version 2.39.0 of selenium that does not work with latest FF browsers, we include-->
-               <!--version 2.45 later on here &ndash;&gt;-->
-            <!--<exclusions>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.seleniumhq.selenium</groupId>-->
-                    <!--<artifactId>selenium-java</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.seleniumhq.selenium</groupId>-->
-                    <!--<artifactId>selenium-server</artifactId>-->
-                <!--</exclusion>-->
-            <!--</exclusions>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>junit</groupId>-->
-            <!--<artifactId>junit</artifactId>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
-    </dependencies>
-
     <repositories>
+        <repository>
+            <id>maven-central</id>
+            <url>https://maven.alfresco.com/nexus/content/repositories/releases</url>
+        </repository>
         <repository>
             <id>alfresco-public</id>
             <url>https://artifacts.alfresco.com/nexus/content/groups/public</url>
@@ -114,5 +38,129 @@
             </snapshots>
         </repository>
     </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>alfresco-public</id>
+            <url>http://artifacts.alfresco.com/nexus/content/groups/public</url>
+        </pluginRepository>
+        <pluginRepository>
+            <id>alfresco-public-snapshots</id>
+            <url>http://artifacts.alfresco.com/nexus/content/groups/public-snapshots</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>daily</updatePolicy>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.alfresco</groupId>
+            <artifactId>alfresco-share</artifactId>
+            <version>${alfresco.version}</version>
+            <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.alfresco</groupId>
+                    <artifactId>alfresco-web-framework-commons</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.alfresco</groupId>
+            <artifactId>alfresco-repository</artifactId>
+            <version>${alfresco.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.alfresco</groupId>
+            <artifactId>alfresco-remote-api</artifactId>
+            <version>${alfresco.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.alfresco</groupId>
+            <artifactId>alfresco-web-framework-commons</artifactId>
+            <version>${alfresco.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>${alfresco.groupId}</groupId>
+            <artifactId>share</artifactId>
+            <version>${alfresco.version}</version>
+            <type>war</type>
+        </dependency>
+    </dependencies>
+
+    <!--<build>
+        <finalName>${project.artifactId}-1.0-${buildnumber}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.alfresco.maven.plugin</groupId>
+                <artifactId>maven-amp-plugin</artifactId>
+                <version>3.0.4</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <archive>
+                        <addMavenDescriptor>false</addMavenDescriptor>
+                    </archive>
+                </configuration>
+            </plugin>
+
+            &lt;!&ndash; Patched alfresco files must be moved to alfresco.war for load as high priority classes  &ndash;&gt;
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.1</version>
+                <executions>
+                    <execution>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <tasks>
+                                <move todir="${project.build.directory}/${project.artifactId}-1.0-SNAPSHOT/config/org/alfresco">
+                                    <fileset dir="${project.build.directory}/classes/org/alfresco"/>
+                                </move>
+                            </tasks>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+        </plugins>
+    </build>-->
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <!-- Here is can control the order of overlay of your (WAR, AMP, etc.) dependencies
+                        | NOTE: At least one WAR dependency must be uncompressed first
+                        | NOTE: In order to have a dependency effectively added to the WAR you need to
+                        | explicitly mention it in the overlay section.
+                        | NOTE: First-win resource strategy is used by the WAR plugin
+                        -->
+                    <overlays>
+                        <!-- The current project customizations -->
+                        <overlay/>
+                        <!-- The Share WAR -->
+                        <overlay>
+                            <groupId>${alfresco.groupId}</groupId>
+                            <artifactId>share</artifactId>
+                            <type>war</type>
+                            <!-- To allow inclusion of META-INF -->
+                            <excludes/>
+                        </overlay>
+                        <!-- Add / order here the Share AMPs declared above -->
+                    </overlays>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
